--- a/Experiment/AdoptionApplication/angular.json
+++ b/Experiment/AdoptionApplication/angular.json
@@ -87,6 +87,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/aos/dist/aos.css",
               "src/styles.css"
             ],
             "scripts": []
